--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "draft-js": "^0.11.7",
     "express": "^4.18.3",
     "flask": "^0.2.10",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.51.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
