--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "dompurify": "^3.0.9",
+    "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
     "express": "^4.18.3",
     "flask": "^0.2.10",
