--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@draft-js-plugins/editor": "^4.1.4",
+    "@draft-js-plugins/image": "^4.1.4",
+    "@draft-js-plugins/static-toolbar": "^4.1.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "contenido": "^1.2.11",
     "cors": "^2.8.5",
     "dompurify": "^3.0.9",
     "draft-convert": "^2.1.13",
@@ -15,7 +19,6 @@
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.51.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -57,10 +60,12 @@
     "@storybook/react": "^7.6.17",
     "@storybook/react-webpack5": "^7.6.17",
     "@storybook/test": "^7.6.17",
+    "css-loader": "^6.10.0",
     "eslint-plugin-storybook": "^0.8.0",
     "prop-types": "^15.8.1",
     "react-router-dom": "^6.22.3",
     "storybook": "^7.6.17",
+    "style-loader": "^3.3.4",
     "webpack": "^5.90.3"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
