--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@storybook/test": "^7.6.17",
     "css-loader": "^6.10.0",
     "eslint-plugin-storybook": "^0.8.0",
+    "json-loader": "^0.5.7",
     "prop-types": "^15.8.1",
     "storybook": "^7.6.17",
     "style-loader": "^3.3.4",
