Allows to add skills to the database

--- a/src/webSettings.json
+++ b/src/webSettings.json
@@ -2,7 +2,7 @@
     "Layouts": [
         {
             "PageName": "Projects",
-            "Type": "list"
+            "Type": null
         },
         {
             "PageName": "Posts",
