Change which social media to display

--- a/src/webSettings.json
+++ b/src/webSettings.json
@@ -2,7 +2,7 @@
     "Layouts": [
         {
             "PageName": "Projects",
-            "Type": null
+            "Type": "grid"
         },
         {
             "PageName": "Posts",
