--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dompurify": "^3.0.9",
-    "draft-convert": "^2.1.13",
-    "draft-js": "^0.11.7",
-    "express": "^4.18.3",
     "flask": "^0.2.10",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
-    "react-pdf": "^7.7.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
